fixed overflow bug on index & error toast for /home without user session

--- a/styling/index/index.css
+++ b/styling/index/index.css
@@ -9,7 +9,7 @@ body.modalOpen {
 }
 
 body {
-    overflow: scroll;
+    overflow-y: scroll;
 
     main {
         display: flex;
